#
# Copyright (C) 2020 Centre National d'Etudes Spatiales (CNES)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
#
############################################################################################################
#                                                                                                          #
#                        o     o                                                                           #
#                        oo   oo   oo        o   oo        ,-.                                             #
#                        o o o o  o  o       o  o  o       \_/                                             #
#                        o  o  o o    o      o o    o     {|||D                                            #
#                        o     o oooooo      o oooooo      / \                                             #
#                        o     o o    o o    o o    o      `-^                                             #
#                        o     o o    o  oooo  o    o                                                      #
#                                                                                                          #
############################################################################################################
#                                                                                                          #
# Author: CS Systemes d'Information  (France)                                                              #
#                                                                                                          #
############################################################################################################
# HISTORIQUE                                                                                               #
#                                                                                                          #
# VERSION : 1-0-0 : <TypeFT> : <NumFT> : 22 mars 2019 : Creation                                           #
#                                                                                                          #
# FIN-HISTORIQUE                                                                                           #
#                                                                                                          #
# $Id                                                                                                      #
#                                                                                                          #
#                                                                                                          #
############################################################################################################

SET(MAJADATA_TU_CODE ${MAJADATA_TU}/Code)
SET(INPUT_MAJADATATU_IMAGES                    ${MAJADATA_TU_CODE}/Images)
SET(INPUT_MAJADATATU_FILES                     ${MAJADATA_TU_CODE}/Files)
SET(INPUT_MAJADATATU_IMAGES_DTM  ${INPUT_MAJADATATU_IMAGES}/dtm)
SET(BASELINEDATATU_FILES              ${MAJADATA_TU_CODE}/Baseline/Files)

SET(MAJADATA_TU_ORCHESTRATOR ${MAJADATA_TU}/orchestrator)

ADD_SUBDIRECTORY(Code)
ADD_SUBDIRECTORY(Utilities)
ADD_SUBDIRECTORY(orchestrator)
ADD_SUBDIRECTORY(StartMaja)
