#
# Copyright (C) 2020 Centre National d'Etudes Spatiales (CNES)
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
#
############################################################################################################
#                                                                                                          #
#                                ooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo         #
#                             o                                                                            #
#                          o                                                                               #
#                        o                                                                                 #
#                      o                                                                                   #
#                     o       ooooooo       ooooooo    o         o      oo                                 #
#    o              o       o        o     o       o   o         o     o   o                               #
#      o           o       o          o   o         o  o         o    o      o                             #
#        o        o       o           o   o         o  o         o    o        o                           #
#         o      o        o      oooo     o         o  o         o   o           o                         #
#          o    o          o              o         o  o         o   o           o                         #
#           o  o            o             o         o  o o      o   o          o                           #
#            oo              oooooooo    o         o   o  oooooo   o      oooo                             #
#                                                     o                                                    #
#                                                     o                                                    #
#                                                    o                            o                        #
#                                                    o            o      oooo     o   o      oooo          #
#                                                   o             o         o    o    o         o          #
#                                                   o            o       ooo     o   o       ooo           #
#                                                               o       o       o   o          o           #
#                                                               ooooo   oooo    o   ooooo  oooo            #
#                                                                              o                           #
#                                                                                                          #
############################################################################################################
#                                                                                                          #
# Author: CS Systemes d'Information  (France)                                                              #
#                                                                                                          #
############################################################################################################
# HISTORIQUE                                                                                               #
#                                                                                                          #
# VERSION : 2-0-0 : DM : LAIG-DM-MAC-146-CNES : 14 octobre 2011 : Modification pour prise en compte             #
#                                                            d'evolutions liees a MACCS                    #
#                                                                                                          #
# VERSION : 1-0-0 : <TypeFT> : <NumFT> : 01 avril 2009 : Creation                                                           
#                                                                                                          #
# FIN-HISTORIQUE                                                                                           #
#                                                                                                          #
# $Id$
#                                                                                                          #
############################################################################################################
#-----------------------------------------------------------------------------
# Add libraries subdirectories 
#ADD_SUBDIRECTORY(AOTEstimation)
ADD_SUBDIRECTORY(AtmosphericAbsorptionCorrection)
#ADD_SUBDIRECTORY(CirrusCorrection)
#ADD_SUBDIRECTORY(CirrusFlag)
#ADD_SUBDIRECTORY(CirrusMask)
#ADD_SUBDIRECTORY(CloudMasking)
ADD_SUBDIRECTORY(CompositeImage)
#ADD_SUBDIRECTORY(DTMProcessing)
#ADD_SUBDIRECTORY(EnvironmentCorrection)
#ADD_SUBDIRECTORY(GeometricFlags)
#ADD_SUBDIRECTORY(RainDetection)
ADD_SUBDIRECTORY(RayleighCorrection)
#ADD_SUBDIRECTORY(ReduceLutComputation)
#ADD_SUBDIRECTORY(ScatteringCorrection)
#ADD_SUBDIRECTORY(SlopeCorrection)
#ADD_SUBDIRECTORY(SnowMasking)
#ADD_SUBDIRECTORY(Subsampling)
#ADD_SUBDIRECTORY(WaterMasking)

